feat(wip): show Windy webcams near the place and on the map
